--- a/app/src/main/res/layout/fragment_team_count_step.xml
+++ b/app/src/main/res/layout/fragment_team_count_step.xml
@@ -8,65 +8,13 @@
     android:clickable="true"
     android:focusable="true">
 
-    <ImageView
-        android:id="@+id/fragment_create_organization_back_image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="30dp"
-        android:scaleType="center"
-        android:src="@drawable/ic_arrow_white_left"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/fragment_create_organization_title_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="Создайте Движ"
-        android:textColor="@color/white"
-        android:textColorHint="#9D9E9E"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_create_organization_back_image"
-        app:layout_constraintEnd_toStartOf="@id/fragment_create_organization_title_step_text_view"
-        app:layout_constraintStart_toEndOf="@id/fragment_create_organization_back_image"
-        app:layout_constraintTop_toTopOf="@id/fragment_create_organization_back_image" />
-
-    <TextView
-        android:id="@+id/fragment_create_organization_title_step_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:text="1/22"
-        android:textColor="@color/white"
-        android:textColorHint="#9D9E9E"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_create_organization_title_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/fragment_create_organization_title_text_view"
-        app:layout_constraintTop_toTopOf="@id/fragment_create_organization_title_text_view" />
-
-    <View
-        android:id="@+id/fragment_create_organization_separator_1"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/bg_gradient_dark_grey_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_title_step_text_view" />
-
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_separator_1">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -77,8 +25,7 @@
                 android:id="@+id/fragment_event_page_location_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:text="Максимальный размер группы"
                 android:textColor="@color/white"
                 android:textSize="24sp"
@@ -91,9 +38,8 @@
                 android:id="@+id/fragment_create_organization_title_5"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="24dp"
                 android:text="Максимальное количество команд"
                 android:textColor="@color/prompt_color"
                 android:textSize="16sp"
@@ -105,13 +51,13 @@
                 android:id="@+id/fragment_create_organization_edit_text_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_gradient_dark_grey_button"
                 android:gravity="start"
                 android:hint="Кол-во команд"
-                android:padding="20dp"
                 android:inputType="number"
+                android:padding="20dp"
                 android:paddingBottom="40dp"
                 android:textColor="@color/white"
                 android:textColorHint="#9D9E9E"
@@ -122,9 +68,8 @@
                 android:id="@+id/fragment_create_organization_title_6"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="24dp"
                 android:text="Максимальное количество участников в команде"
                 android:textColor="@color/prompt_color"
                 android:textSize="16sp"
@@ -136,13 +81,13 @@
                 android:id="@+id/fragment_create_organization_edit_text_4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_gradient_dark_grey_button"
                 android:gravity="start"
                 android:hint="Кол-во участников в одной команде"
-                android:padding="20dp"
                 android:inputType="number"
+                android:padding="20dp"
                 android:paddingBottom="40dp"
                 android:textColor="@color/white"
                 android:textColorHint="#9D9E9E"
@@ -160,7 +105,7 @@
         android:layout_height="wrap_content"
         android:background="#1F222A"
         android:orientation="horizontal"
-        android:paddingHorizontal="24dp"
+        android:paddingHorizontal="16dp"
         android:paddingTop="24dp"
         android:paddingBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent">
