--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -75,8 +75,8 @@
             android:background="@color/black" />
 
         <ProgressBar
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@drawable/bg_purple_button"
             android:foregroundGravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
