--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,8 +46,8 @@
             android:background="@color/black" />
 
         <ProgressBar
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@drawable/bg_purple_button"
             android:foregroundGravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
