--- a/app/src/main/res/layout/fragment_category_step.xml
+++ b/app/src/main/res/layout/fragment_category_step.xml
@@ -8,66 +8,13 @@
     android:clickable="true"
     android:focusable="true">
 
-
-    <ImageView
-        android:id="@+id/fragment_create_organization_back_image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="30dp"
-        android:scaleType="center"
-        android:src="@drawable/ic_arrow_white_left"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/fragment_create_organization_title_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="Создайте Движ"
-        android:textColor="@color/white"
-        android:textColorHint="#9D9E9E"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_create_organization_back_image"
-        app:layout_constraintEnd_toStartOf="@id/fragment_create_organization_title_step_text_view"
-        app:layout_constraintStart_toEndOf="@id/fragment_create_organization_back_image"
-        app:layout_constraintTop_toTopOf="@id/fragment_create_organization_back_image" />
-
-    <TextView
-        android:id="@+id/fragment_create_organization_title_step_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:text="1/22"
-        android:textColor="@color/white"
-        android:textColorHint="#9D9E9E"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_create_organization_title_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/fragment_create_organization_title_text_view"
-        app:layout_constraintTop_toTopOf="@id/fragment_create_organization_title_text_view" />
-
-    <View
-        android:id="@+id/fragment_create_organization_separator_1"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/bg_gradient_dark_grey_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_title_step_text_view" />
-
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_separator_1">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -77,9 +24,8 @@
                 android:id="@+id/fragment_event_page_location_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:text="О чем мероприятие?"
                 android:textColor="@color/white"
                 android:textSize="24sp"
@@ -92,9 +38,8 @@
                 android:id="@+id/fragment_create_organization_title_5"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="24dp"
                 android:text="Выберите категорию которая лучше всего описывает ваше мероприятие."
                 android:textColor="@color/prompt_color"
                 android:textSize="16sp"
@@ -106,9 +51,8 @@
                 android:id="@+id/fragment_create_organization_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:background="@drawable/bg_gradient_dark_grey_button"
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="16dp"
@@ -122,9 +66,8 @@
                 android:id="@+id/fragment_create_organization_title_6"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="24dp"
                 android:text="Добавьте еще одну категорию (необязательно)"
                 android:textColor="@color/prompt_color"
                 android:textSize="16sp"
@@ -136,9 +79,8 @@
                 android:id="@+id/fragment_category_step_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:paddingBottom="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_title_6" />
@@ -153,7 +95,7 @@
         android:layout_height="wrap_content"
         android:background="#1F222A"
         android:orientation="horizontal"
-        android:paddingHorizontal="24dp"
+        android:paddingHorizontal="16dp"
         android:paddingTop="24dp"
         android:paddingBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent">
