--- a/app/src/main/res/layout/fragment_language_step.xml
+++ b/app/src/main/res/layout/fragment_language_step.xml
@@ -8,76 +8,20 @@
     android:clickable="true"
     android:focusable="true">
 
-
-    <ImageView
-        android:id="@+id/fragment_create_organization_back_image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="30dp"
-        android:scaleType="center"
-        android:src="@drawable/ic_arrow_white_left"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/fragment_create_organization_title_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="Создайте Движ"
-        android:textColor="@color/white"
-        android:textColorHint="#9D9E9E"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_create_organization_back_image"
-        app:layout_constraintEnd_toStartOf="@id/fragment_create_organization_title_step_text_view"
-        app:layout_constraintStart_toEndOf="@id/fragment_create_organization_back_image"
-        app:layout_constraintTop_toTopOf="@id/fragment_create_organization_back_image" />
-
-    <TextView
-        android:id="@+id/fragment_create_organization_title_step_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:text="1/22"
-        android:textColor="@color/white"
-        android:textColorHint="#9D9E9E"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_create_organization_title_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/fragment_create_organization_title_text_view"
-        app:layout_constraintTop_toTopOf="@id/fragment_create_organization_title_text_view" />
-
-    <View
-        android:id="@+id/fragment_create_organization_separator_1"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/bg_gradient_dark_grey_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_title_step_text_view" />
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_separator_1">
-
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/fragment_event_page_location_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginHorizontal="16dp"
             android:text="Язык"
             android:textColor="@color/white"
             android:textSize="24sp"
@@ -90,9 +34,8 @@
             android:id="@+id/fragment_create_organization_title_5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="24dp"
             android:text="Укажите основной язык на котором будет проводиться мероприятие"
             android:textColor="@color/prompt_color"
             android:textSize="16sp"
@@ -104,9 +47,8 @@
             android:id="@+id/fragment_create_organization_title_6"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="24dp"
             android:text="Вы можете выбрать несколько языков"
             android:textColor="@color/prompt_color"
             android:textSize="16sp"
@@ -118,28 +60,25 @@
             android:id="@+id/fragment_language_step_languages_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
             android:background="@drawable/bg_gradient_dark_grey_button"
             android:hint="Выбрать язык"
-            android:textColorHint="@color/grey_default"
             android:padding="20dp"
             android:textColor="@color/white"
+            android:textColorHint="@color/grey_default"
             android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_title_6"
-            />
+            app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_title_6" />
 
         <ImageView
             android:id="@+id/fragment_registration_user_birthday_icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            app:layout_constraintBottom_toBottomOf="@+id/fragment_language_step_languages_text"
-            app:layout_constraintEnd_toEndOf="@id/fragment_language_step_languages_text"
-            app:layout_constraintTop_toTopOf="@id/fragment_language_step_languages_text"
             android:layout_marginEnd="20dp"
             android:src="@drawable/ic_triangle_down"
-            />
+            app:layout_constraintBottom_toBottomOf="@+id/fragment_language_step_languages_text"
+            app:layout_constraintEnd_toEndOf="@id/fragment_language_step_languages_text"
+            app:layout_constraintTop_toTopOf="@id/fragment_language_step_languages_text" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -149,7 +88,7 @@
         android:layout_height="wrap_content"
         android:background="#1F222A"
         android:orientation="horizontal"
-        android:paddingHorizontal="24dp"
+        android:paddingHorizontal="16dp"
         android:paddingTop="24dp"
         android:paddingBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent">
