--- a/app/src/main/res/layout/fragment_location_step.xml
+++ b/app/src/main/res/layout/fragment_location_step.xml
@@ -9,65 +9,13 @@
     android:focusable="true"
     tools:ignore="MissingDefaultResource">
 
-    <ImageView
-        android:id="@+id/fragment_create_organization_back_image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="30dp"
-        android:scaleType="center"
-        android:src="@drawable/ic_arrow_white_left"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/fragment_create_organization_title_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="Создайте Движ"
-        android:textColor="@color/white"
-        android:textColorHint="#9D9E9E"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_create_organization_back_image"
-        app:layout_constraintEnd_toStartOf="@id/fragment_create_organization_title_step_text_view"
-        app:layout_constraintStart_toEndOf="@id/fragment_create_organization_back_image"
-        app:layout_constraintTop_toTopOf="@id/fragment_create_organization_back_image" />
-
-    <TextView
-        android:id="@+id/fragment_create_organization_title_step_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:text="1/22"
-        android:textColor="@color/white"
-        android:textColorHint="#9D9E9E"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_create_organization_title_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/fragment_create_organization_title_text_view"
-        app:layout_constraintTop_toTopOf="@id/fragment_create_organization_title_text_view" />
-
-    <View
-        android:id="@+id/fragment_create_organization_separator_1"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/bg_gradient_dark_grey_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_title_step_text_view" />
-
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/view"
+        app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_separator_1">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -78,8 +26,7 @@
                 android:id="@+id/fragment_event_page_location_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:text="Где все будет проходить?"
                 android:textColor="@color/white"
                 android:textSize="24sp"
@@ -92,9 +39,8 @@
                 android:id="@+id/fragment_registration_user_gender_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:background="@drawable/bg_gradient_dark_grey_button"
                 android:hint="Страна"
                 android:padding="20dp"
@@ -117,9 +63,8 @@
                 android:id="@+id/fragment_location_step_city"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:background="@drawable/bg_gradient_dark_grey_button"
                 android:hint="Город"
                 android:padding="20dp"
@@ -142,9 +87,8 @@
                 android:id="@+id/fragment_location_step_street"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:background="@drawable/bg_gradient_dark_grey_button"
                 android:hint="Улица"
                 android:padding="20dp"
@@ -157,56 +101,53 @@
                 android:id="@+id/fragment_location_step_flat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
-                android:inputType="number"
                 android:background="@drawable/bg_gradient_dark_grey_button"
                 android:hint="Квартира, блок, строение"
+                android:inputType="number"
                 android:padding="20dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/grey_default"
                 android:textSize="14sp"
                 app:layout_constraintTop_toBottomOf="@id/fragment_location_step_street" />
 
-<!--            <Button-->
-<!--                android:id="@+id/fragment_create_organization_button"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginStart="24dp"-->
-<!--                android:layout_marginTop="24dp"-->
-<!--                android:layout_marginEnd="24dp"-->
-<!--                android:background="@drawable/bg_gradient_dark_grey_button"-->
-<!--                android:paddingHorizontal="32dp"-->
-<!--                android:paddingVertical="16dp"-->
-<!--                android:text="Укажите на карте"-->
-<!--                android:textColor="@color/prompt_color"-->
-<!--                android:textSize="16sp"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintTop_toBottomOf="@id/fragment_location_step_flat" />-->
+            <!--            <Button-->
+            <!--                android:id="@+id/fragment_create_organization_button"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginStart="24dp"-->
+            <!--                android:layout_marginTop="24dp"-->
+            <!--                android:layout_marginEnd="24dp"-->
+            <!--                android:background="@drawable/bg_gradient_dark_grey_button"-->
+            <!--                android:paddingHorizontal="32dp"-->
+            <!--                android:paddingVertical="16dp"-->
+            <!--                android:text="Укажите на карте"-->
+            <!--                android:textColor="@color/prompt_color"-->
+            <!--                android:textSize="16sp"-->
+            <!--                app:layout_constraintStart_toStartOf="parent"-->
+            <!--                app:layout_constraintTop_toBottomOf="@id/fragment_location_step_flat" />-->
 
             <TextView
                 android:id="@+id/fragment_event_page_location_text_1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
                 android:text="Опишите место"
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/fragment_location_step_flat"/>
+                app:layout_constraintTop_toBottomOf="@id/fragment_location_step_flat" />
 
             <TextView
                 android:id="@+id/fragment_create_organization_title_5"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="24dp"
                 android:text="Предоставьте инструкции с маршутом. Чем подробнее, тем лучше."
                 android:textColor="@color/prompt_color"
                 android:textSize="16sp"
@@ -218,7 +159,7 @@
                 android:id="@+id/fragment_create_organization_edit_text_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/bg_gradient_dark_grey_button"
                 android:gravity="start"
@@ -241,7 +182,7 @@
         android:layout_height="wrap_content"
         android:background="#1F222A"
         android:orientation="horizontal"
-        android:paddingHorizontal="24dp"
+        android:paddingHorizontal="16dp"
         android:paddingTop="24dp"
         android:paddingBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent">
