--- a/app/src/main/res/layout/fragment_photo_step.xml
+++ b/app/src/main/res/layout/fragment_photo_step.xml
@@ -7,64 +7,12 @@
     android:clickable="true"
     android:focusable="true">
 
-    <ImageView
-        android:id="@+id/fragment_create_organization_back_image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="30dp"
-        android:scaleType="center"
-        android:src="@drawable/ic_arrow_white_left"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/fragment_create_organization_title_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="Создайте Движ"
-        android:textColor="@color/white"
-        android:textColorHint="#9D9E9E"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_create_organization_back_image"
-        app:layout_constraintEnd_toStartOf="@id/fragment_create_organization_title_step_text_view"
-        app:layout_constraintStart_toEndOf="@id/fragment_create_organization_back_image"
-        app:layout_constraintTop_toTopOf="@id/fragment_create_organization_back_image" />
-
-    <TextView
-        android:id="@+id/fragment_create_organization_title_step_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:text="1/22"
-        android:textColor="@color/white"
-        android:textColorHint="#9D9E9E"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_create_organization_title_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/fragment_create_organization_title_text_view"
-        app:layout_constraintTop_toTopOf="@id/fragment_create_organization_title_text_view" />
-
-    <View
-        android:id="@+id/fragment_create_organization_separator_1"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/bg_gradient_dark_grey_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_title_step_text_view" />
-
     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/view"
-        app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_separator_1">
+        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -75,9 +23,8 @@
                 android:id="@+id/fragment_event_page_location_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:text="Добавьте фото на страницу мероприятия"
                 android:textColor="@color/white"
                 android:textSize="24sp"
@@ -90,9 +37,8 @@
                 android:id="@+id/fragment_create_organization_title_5"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:text="Добавьте хотя бы 7 качественных фото, чтобы продемонстрировать  атмосферу мероприятия."
                 android:textColor="@color/grey_default"
                 android:textSize="16sp"
@@ -104,9 +50,8 @@
                 android:id="@+id/fragment_create_organization_title_6"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:text="1. Снимки должны быть яркими, четкими и цветными.
 \n2. Они должны точно описывать мероприятие.
 \n3. На фото нельзя накладывать фильтры, текст, графику и логотипы. запрещено делать коллажи.
@@ -121,9 +66,8 @@
                 android:id="@+id/fragment_create_organization_title_7"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:text="Фото обложки"
                 android:textColor="@color/grey_default"
                 android:textSize="16sp"
@@ -135,9 +79,8 @@
                 android:id="@+id/fragment_create_organization_title_8"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/ic_photo_add"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -160,14 +103,12 @@
                 app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_title_8" />
 
 
-
             <TextView
                 android:id="@+id/fragment_create_organization_title_9"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:text="Фото из галереи: покажите детали мероприятия"
                 android:textColor="@color/grey_default"
                 android:textSize="16sp"
@@ -179,9 +120,8 @@
                 android:id="@+id/fragment_create_organization_title_10"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/ic_photo_add"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -192,9 +132,8 @@
                 android:id="@+id/additional_photo"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/ic_photo_add"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -212,7 +151,7 @@
         android:layout_height="wrap_content"
         android:background="#1F222A"
         android:orientation="horizontal"
-        android:paddingHorizontal="24dp"
+        android:paddingHorizontal="16dp"
         android:paddingTop="24dp"
         android:paddingBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent">
