--- a/app/src/main/res/layout/fragment_price_step.xml
+++ b/app/src/main/res/layout/fragment_price_step.xml
@@ -8,47 +8,6 @@
     android:clickable="true"
     android:focusable="true">
 
-
-    <ImageView
-        android:id="@+id/fragment_create_organization_back_image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="30dp"
-        android:scaleType="center"
-        android:src="@drawable/ic_arrow_white_left"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/fragment_create_organization_title_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="Создайте Движ"
-        android:textColor="@color/white"
-        android:textColorHint="#9D9E9E"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_create_organization_back_image"
-        app:layout_constraintEnd_toStartOf="@id/fragment_create_organization_title_step_text_view"
-        app:layout_constraintStart_toEndOf="@id/fragment_create_organization_back_image"
-        app:layout_constraintTop_toTopOf="@id/fragment_create_organization_back_image" />
-
-    <TextView
-        android:id="@+id/fragment_create_organization_title_step_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:text="1/22"
-        android:textColor="@color/white"
-        android:textColorHint="#9D9E9E"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_create_organization_title_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/fragment_create_organization_title_text_view"
-        app:layout_constraintTop_toTopOf="@id/fragment_create_organization_title_text_view" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -56,16 +15,15 @@
         app:layout_constraintBottom_toTopOf="@id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_title_step_text_view">
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <TextView
             android:id="@+id/fragment_event_page_location_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
             android:text="Цены для участников"
             android:textColor="@color/white"
             android:textSize="24sp"
@@ -78,9 +36,8 @@
             android:id="@+id/fragment_create_organization_title_5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
             android:text="Вы сами определяете стоимость. Укажите цену за одного участника и увидите общий заработок.(Минимальная сумма 300 тг.)"
             android:textColor="@color/prompt_color"
             android:textSize="16sp"
@@ -93,9 +50,8 @@
             android:id="@+id/fragment_event_page_location_text_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
             android:text="Цена за участника"
             android:textColor="@color/white"
             android:textSize="16sp"
@@ -108,7 +64,7 @@
             android:id="@+id/qwe"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="24dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
             android:orientation="horizontal"
             android:weightSum="2"
@@ -119,33 +75,33 @@
                 android:id="@+id/qwe1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:paddingEnd="10dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:paddingEnd="10dp">
 
                 <TextView
                     android:id="@+id/fragment_create_organization_title_7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Цена для каждого участника"
                     android:minLines="3"
+                    android:text="Цена для каждого участника"
                     android:textColor="@color/prompt_color"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                    <EditText
-                        android:hint=" Цена"
-                        android:id="@+id/asdzxc"
-                        android:layout_marginTop="16dp"
-                        android:padding="12dp"
-                        android:inputType="number"
-                        android:drawablePadding="4dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/bg_grey_with_light_grey_border"
-                        android:drawableLeft="@drawable/ic_currency"
-                        app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_title_7" />
+                <EditText
+                    android:id="@+id/asdzxc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/bg_grey_with_light_grey_border"
+                    android:drawableLeft="@drawable/ic_currency"
+                    android:drawablePadding="4dp"
+                    android:hint=" Цена"
+                    android:inputType="number"
+                    android:padding="12dp"
+                    app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_title_7" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -153,32 +109,32 @@
                 android:id="@+id/qwe2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:paddingStart="10dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:paddingStart="10dp">
 
                 <TextView
                     android:id="@+id/fragment_create_organization_title_9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:minLines="3"
                     android:text="Комиссия 10% Примерный заработок"
                     android:textColor="@color/prompt_color"
                     android:textSize="16sp"
-                    android:minLines="3"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <EditText
-                    android:hint=" Цена"
-                    android:layout_marginTop="16dp"
                     android:id="@+id/asdzxcw"
-                    android:padding="12dp"
-                    android:inputType="number"
-                    android:drawablePadding="4dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     android:background="@drawable/bg_grey_with_light_grey_border"
                     android:drawableLeft="@drawable/ic_currency"
+                    android:drawablePadding="4dp"
+                    android:hint=" Цена"
+                    android:inputType="number"
+                    android:padding="12dp"
                     app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_title_9" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -189,11 +145,10 @@
             android:id="@+id/fragment_create_organization_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="32dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
             android:background="@drawable/bg_gradient_dark_grey_button"
+            android:paddingHorizontal="32dp"
             android:paddingVertical="16dp"
             android:text="Назначить скидку"
             android:textColor="@color/white"
@@ -210,7 +165,7 @@
         android:layout_height="wrap_content"
         android:background="#1F222A"
         android:orientation="horizontal"
-        android:paddingHorizontal="24dp"
+        android:paddingHorizontal="16dp"
         android:paddingTop="24dp"
         android:paddingBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent">
