--- a/app/src/main/res/layout/fragment_profile_page.xml
+++ b/app/src/main/res/layout/fragment_profile_page.xml
@@ -747,6 +747,14 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Версия: 1.0.0"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_page_logout" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
