fixed some moments

--- a/app/src/main/res/layout/fragment_discount_step.xml
+++ b/app/src/main/res/layout/fragment_discount_step.xml
@@ -8,65 +8,13 @@
     android:clickable="true"
     android:focusable="true">
 
-    <ImageView
-        android:id="@+id/fragment_create_organization_back_image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="30dp"
-        android:scaleType="center"
-        android:src="@drawable/ic_arrow_white_left"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/fragment_create_organization_title_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="Создайте Движ"
-        android:textColor="@color/white"
-        android:textColorHint="#9D9E9E"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_create_organization_back_image"
-        app:layout_constraintEnd_toStartOf="@id/fragment_create_organization_title_step_text_view"
-        app:layout_constraintStart_toEndOf="@id/fragment_create_organization_back_image"
-        app:layout_constraintTop_toTopOf="@id/fragment_create_organization_back_image" />
-
-    <TextView
-        android:id="@+id/fragment_create_organization_title_step_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:text="1/22"
-        android:textColor="@color/white"
-        android:textColorHint="#9D9E9E"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_create_organization_title_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/fragment_create_organization_title_text_view"
-        app:layout_constraintTop_toTopOf="@id/fragment_create_organization_title_text_view" />
-
-    <View
-        android:id="@+id/fragment_create_organization_separator_1"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/bg_gradient_dark_grey_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_title_step_text_view" />
-
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_separator_1">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -77,8 +25,7 @@
                 android:id="@+id/fragment_event_page_location_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:text="Цены для участников"
                 android:textColor="@color/white"
                 android:textSize="24sp"
@@ -91,7 +38,7 @@
                 android:id="@+id/qwe1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
                 android:orientation="horizontal"
                 android:weightSum="3"
@@ -101,11 +48,11 @@
                     android:id="@+id/text1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:background="@drawable/bg_grey_with_light_grey_border_left_side_rounded"
                     android:paddingVertical="12dp"
                     android:paddingStart="24dp"
-                    android:layout_weight="2"
                     android:text="1000"
-                    android:background="@drawable/bg_grey_with_light_grey_border_left_side_rounded"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -114,11 +61,11 @@
                     android:id="@+id/text2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:paddingVertical="12dp"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="KZT"
                     android:background="@drawable/bg_purple_button_rounded_right_side"
+                    android:gravity="center"
+                    android:paddingVertical="12dp"
+                    android:text="KZT"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -129,9 +76,8 @@
                 android:id="@+id/fragment_event_page_location_text_1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:text="Выберите кол-во участников"
                 android:textColor="@color/white"
                 android:textSize="16sp"
@@ -144,39 +90,36 @@
                 android:id="@+id/checkbox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
+                android:button="@drawable/bg_checkbox_state"
                 android:paddingLeft="8dp"
                 android:text="5 участников"
                 android:textSize="20sp"
-                android:button="@drawable/bg_checkbox_state"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/fragment_event_page_location_text_1"  />
+                app:layout_constraintTop_toBottomOf="@id/fragment_event_page_location_text_1" />
 
             <CheckBox
                 android:id="@+id/checkbox1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
+                android:button="@drawable/bg_checkbox_state"
                 android:paddingLeft="8dp"
                 android:text="10+ участников"
                 android:textSize="20sp"
-                android:button="@drawable/bg_checkbox_state"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/checkbox"  />
+                app:layout_constraintTop_toBottomOf="@id/checkbox" />
 
             <View
                 android:id="@+id/sep2"
                 android:layout_width="0dp"
                 android:layout_height="2dp"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:background="@drawable/bg_gradient_dark_grey_button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -186,9 +129,8 @@
                 android:id="@+id/qwe6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:text="Определите процент \nскидки"
                 android:textColor="@color/white"
                 android:textSize="16sp"
@@ -200,9 +142,8 @@
                 android:id="@+id/qwe7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:text="-5%"
                 android:textColor="@color/white"
                 android:textSize="16sp"
@@ -214,9 +155,8 @@
                 android:id="@+id/qwe8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:text="0%"
                 android:textColor="@color/grey_default"
                 android:textSize="16sp"
@@ -228,9 +168,8 @@
                 android:id="@+id/qwe9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
                 android:text="99%"
                 android:textColor="@color/grey_default"
                 android:textSize="16sp"
@@ -242,12 +181,11 @@
                 android:id="@+id/qwe10"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginStart="20dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="12dp"
-                android:layout_marginEnd="20dp"
                 android:progress="34"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/qwe9" />
 
 
@@ -261,7 +199,7 @@
         android:layout_height="wrap_content"
         android:background="#1F222A"
         android:orientation="horizontal"
-        android:paddingHorizontal="24dp"
+        android:paddingHorizontal="16dp"
         android:paddingTop="24dp"
         android:paddingBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent">
