--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -14,7 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:animateLayoutChanges="true"
-        android:paddingBottom="24dp"
         app:layout_constraintBottom_toTopOf="@id/search_main"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -28,8 +27,8 @@
                 android:id="@+id/fragment_search_return_button"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="10dp"
                 android:scaleType="center"
                 android:src="@drawable/ic_arrow_white_left"
                 app:layout_constraintStart_toStartOf="parent"
@@ -39,8 +38,8 @@
                 android:id="@+id/fragment_notifications_header_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:fontFamily="@font/app_font_bd"
                 android:text="Поиск"
                 android:textColor="@color/white"
@@ -54,8 +53,8 @@
                 android:id="@+id/fragment_bottom_sheet_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="16dp"
                 android:animateLayoutChanges="true"
                 android:background="@drawable/bg_search_parameter_rounded_light_grey"
                 android:paddingVertical="24dp"
@@ -65,8 +64,7 @@
                     android:id="@+id/fragment_search_header"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginEnd="24dp"
+                    android:layout_marginHorizontal="16dp"
                     android:fontFamily="@font/app_font_bd"
                     android:text="Что вам по душе?"
                     android:textColor="@color/white"
@@ -79,7 +77,7 @@
                     android:id="@+id/fragment_home_search_edit_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="24dp"
+                    android:layout_marginHorizontal="16dp"
                     android:layout_marginTop="12dp"
                     android:background="@drawable/bg_gradient_dark_grey_button"
                     android:drawableLeft="@drawable/ic_search"
@@ -107,7 +105,7 @@
                 android:id="@+id/fragment_search_calendar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
                 android:animateLayoutChanges="true"
                 android:background="@drawable/bg_search_parameter_rounded_light_grey"
@@ -118,8 +116,7 @@
                     android:id="@+id/fragment_search_calendar_header"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginEnd="24dp"
+                    android:layout_marginHorizontal="16dp"
                     android:fontFamily="@font/app_font_bd"
                     android:text="Когда тусанем?"
                     android:textColor="@color/white"
@@ -132,7 +129,6 @@
                     android:id="@+id/vieq"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-
                     android:orientation="vertical"
                     android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -210,7 +206,7 @@
                 android:id="@+id/fragment_search_quests"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/bg_search_parameter_rounded_light_grey"
                 android:paddingVertical="24dp"
@@ -220,8 +216,7 @@
                     android:id="@+id/fragment_search_quests_header"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginEnd="24dp"
+                    android:layout_marginHorizontal="16dp"
                     android:fontFamily="@font/app_font_bd"
                     android:text="С кем тусанем?"
                     android:textColor="@color/white"
@@ -241,9 +236,8 @@
                         android:id="@+id/fragment_search_quests_adult"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="24dp"
+                        android:layout_marginHorizontal="16dp"
                         android:layout_marginTop="24dp"
-                        android:layout_marginEnd="24dp"
                         android:fontFamily="@font/app_font_bk"
                         android:text="Взрослый"
                         android:textColor="@color/white"
@@ -255,10 +249,9 @@
                         android:id="@+id/fragment_search_quests_adult_des"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginEnd="24dp"
+                        android:layout_marginHorizontal="16dp"
                         android:fontFamily="@font/app_font_bk"
-                        android:text="Люди с выше 13"
+                        android:text="Люди с выше 13 лет"
                         android:textColor="@color/grey_default"
                         android:textSize="16sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -268,8 +261,7 @@
                         android:id="@+id/fragment_search_quests_adult_plus"
                         android:layout_width="36dp"
                         android:layout_height="36dp"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginEnd="24dp"
+                        android:layout_marginHorizontal="16dp"
                         android:src="@drawable/ic_circle_plus"
                         app:layout_constraintBottom_toBottomOf="@id/fragment_search_quests_adult_des"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -305,9 +297,8 @@
                         android:id="@+id/fragment_search_quests_stud"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="24dp"
+                        android:layout_marginHorizontal="16dp"
                         android:layout_marginTop="12dp"
-                        android:layout_marginEnd="24dp"
                         android:fontFamily="@font/app_font_bk"
                         android:text="Детский"
                         android:textColor="@color/white"
@@ -319,8 +310,7 @@
                         android:id="@+id/fragment_search_quests_stud_des"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginEnd="24dp"
+                        android:layout_marginHorizontal="16dp"
                         android:fontFamily="@font/app_font_bk"
                         android:text="От 13 лет"
                         android:textColor="@color/grey_default"
@@ -332,8 +322,7 @@
                         android:id="@+id/fragment_search_quests_stud_plus"
                         android:layout_width="36dp"
                         android:layout_height="36dp"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginEnd="24dp"
+                        android:layout_marginHorizontal="16dp"
                         android:src="@drawable/ic_circle_plus"
                         app:layout_constraintBottom_toBottomOf="@id/fragment_search_quests_stud_des"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -396,7 +385,7 @@
             style="line"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="16dp"
             android:fontFamily="@font/app_font_md"
             android:text="Очистить все"
             android:textColor="@color/white"
@@ -426,13 +415,12 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:layout_marginHorizontal="25dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginTop="24dp"
             android:minWidth="150dp"
             android:id="@+id/fragment_search_search"
             android:background="@drawable/bg_purple_button"
             app:layout_constraintEnd_toEndOf="parent"
-
             app:layout_constraintTop_toBottomOf="@id/fragment_detail_page_separator_main" >
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -466,10 +454,6 @@
                     app:layout_constraintBottom_toBottomOf="parent"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
