fix moments and added firebase analytics

--- a/app/src/main/res/layout/fragment_detail_page.xml
+++ b/app/src/main/res/layout/fragment_detail_page.xml
@@ -26,8 +26,8 @@
                 android:layout_width="0dp"
                 android:layout_height="455dp"
                 app:iss_auto_cycle="false"
-                app:iss_placeholder="@drawable/ic_logo"
-                app:iss_error_image="@drawable/ic_logo"
+                app:iss_placeholder="@drawable/logo_event"
+                app:iss_error_image="@drawable/logo_event"
                 app:iss_selected_dot="@drawable/ic_dot_selected"
                 app:iss_unselected_dot="@drawable/ic_dot_unselected"
                 app:layout_constraintEnd_toEndOf="parent"
