--- a/app/src/main/res/layout/fragment_profile_auth.xml
+++ b/app/src/main/res/layout/fragment_profile_auth.xml
@@ -25,10 +25,10 @@
 
         <ImageView
             android:id="@+id/image1"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            android:layout_marginTop="60dp"
-            android:src="@drawable/ic_logo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="130dp"
+            android:src="@drawable/logo_event"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
