--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -3,33 +3,47 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="12dp"
-    android:background="@drawable/bg_item_event_grey"
-    android:paddingBottom="25dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginStart="12dp">
 
     <ImageView
         android:id="@+id/item_event_image"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="14dp"
-        android:background="@drawable/bg_item_event_image_corners"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
         android:src="@drawable/ic_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingVertical="5dp"
+        android:paddingHorizontal="10dp"
+        android:layout_margin="8dp"
+        android:background="@drawable/bg_grey_rounded_corners"
+        app:layout_constraintBottom_toBottomOf="@+id/item_event_image"
+        app:layout_constraintEnd_toEndOf="@+id/item_event_image">
+
+        <TextView
+            android:id="@+id/item_event_price_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="от 5000 тг"
+            android:textColor="@color/white"/>
+
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/item_event_title_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="14dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="Popular"
+        tools:text="Popular"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,56 +54,16 @@
         android:id="@+id/item_event_subtitle_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="14dp"
         android:ellipsize="end"
         android:lines="1"
-        android:text="Пон, 24 Марта · 18:00 - 23:00"
-        android:textColor="@color/nav_focus_color"
+        tools:text="24 Марта"
+        android:textColor="@color/grey_default"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/item_event_title_text_view" />
-
-    <ImageView
-        android:id="@+id/item_event_address_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_location"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/item_event_subtitle_text_view" />
-
-    <TextView
-        android:id="@+id/item_event_address_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="8dp"
-        android:ellipsize="end"
-        android:lines="1"
-        android:text="Атакент парк, Алматы Розыбакиева 72"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@id/item_event_favorite_image"
-        app:layout_constraintStart_toEndOf="@id/item_event_address_image"
-        app:layout_constraintTop_toBottomOf="@id/item_event_subtitle_text_view" />
-
-
-    <ImageView
-        android:id="@+id/item_event_favorite_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_favorite_empty"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/item_event_address_text_view"
-        app:layout_constraintTop_toBottomOf="@id/item_event_subtitle_text_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
